tests/conformance/errors/import_missing_module/input.dgm
imprt no_such_module
